k8s-config/api-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  namespace: starter
spec:
  type: NodePort
  selector:
    app: django
    tier: backend
  ports:
  - protocol: TCP
    port: 8000
    targetPort: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  namespace: starter
  labels:
    app: django
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: django
        tier: backend
    spec:
      containers:
      - name: django
        image: angular-django-starter-api
        imagePullPolicy: Never
        ports:
          - name: http
            containerPort: 8000
