k8s-config/uiux-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-ui-service
  namespace: starter
spec:
  selector:
    app: angular-ui
    tier: frontend
  ports:
    - port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-ui
  namespace: starter
  labels:
    app: angular-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-ui
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: angular-ui
        tier: frontend
    spec:
      containers:
      - name: angular-ui
        image: angular-django-starter-uiux
        imagePullPolicy: Never
        ports:
        - containerPort: 80
          name: angular-ui
